# ursina-proteins

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality.yaml
assets/: insulin.cif
src/: demo.py
src/ursina_proteins/: atoms.py  chains.py  protein.py
tests/: test_chains.py  test_protein.py
